Foto de perfil de candidato

--- a/BITLAB-war/web/alumnos.xhtml
+++ b/BITLAB-war/web/alumnos.xhtml
@@ -73,7 +73,8 @@
                                     <p:rowExpansion>
                                         <p:panelGrid  columns="2" columnClasses="label,value" style="width:300px">
                                             <f:facet name="header">
-                                                <p:graphicImage name="avatar.jpg" height="40%" width="80%"/> 
+                                                <p:graphicImage name="avatar.jpg" height="40%" width="80%"/>
+                                                <!--<p:graphicImage value="/images/#{candidatomanaged.fotoPerfil(candidato)}" style="padding: 5%;width: 150px; height:150px; object-fit: scale-down"/>--> 
                                             </f:facet>
 
                                             <h:outputText value="Codigo" />
