agregando advertencia de confirmacion al rechazar applicantes
agregando advertencia de confirmacion al rechazar applicantes

--- a/BITLAB-war/web/docente.xhtml
+++ b/BITLAB-war/web/docente.xhtml
@@ -107,27 +107,26 @@
                                         <p:panelGrid columns="8" columnClasses="label,value" style="width: auto">
                                             <h:outputLabel value="Primer Nombre:" style="color:blueviolet"/>
                                             <h:outputText value="#{entidad.docPrimerNombre}"/>
-                                            <h:outputLabel value="Primero Apellido:" style="color:blueviolet"/>
-                                            <h:outputText value="#{entidad.docPrimerApellido}" />
-                                            <h:outputLabel value="DUI:" style="color:blueviolet"/>
-                                            <h:outputText value="#{entidad.docDui}"/>
-                                            <h:outputLabel value="Direccion:" style="color:blueviolet"/>
-                                            <h:outputText value="#{entidad.docDireccion}"/>
-                                            <h:outputLabel value="Codigo:" style="color:blueviolet"/>
-                                            <h:outputText value="#{entidad.docCodigo}"/>
-                                            <h:outputLabel value="Estado:" style="color:blueviolet"/>
-                                            <h:outputText value="#{entidad.docEstado}"/>
                                             <h:outputLabel value="Segundo nombre:" style="color:blueviolet"/>
                                             <h:outputText value="#{entidad.docSegundoNombre}" />
-                                            <h:outputLabel value="Segundo Apellido:" style="color:blueviolet"/>
-                                            <h:outputText value="#{entidad.docSegundoApellido}" />
-                                            <h:outputLabel value="Telefono:" style="color:blueviolet"/>
-                                            <h:outputText value="#{entidad.docTelefono}"/>
                                             <h:outputLabel value="Fecha nacimiento:" style="color:blueviolet"/>
                                             <h:outputText value="#{entidad.docFechaNac}">
                                                 <f:convertDateTime pattern="dd/MM/yyyy"/>
                                             </h:outputText>
-                                            <h:outputLabel value="Correo:" style="color:blueviolet"/>
+                                            <h:outputLabel value="Direccion:" style="color:blueviolet"/>
+                                            <h:outputText value="#{entidad.docDireccion}"/>
+                                            <h:outputLabel value="Primero Apellido:" style="color:blueviolet"/>
+                                            <h:outputText value="#{entidad.docPrimerApellido}" />
+                                            <h:outputLabel value="Segundo Apellido:" style="color:blueviolet"/>
+                                            <h:outputText value="#{entidad.docSegundoApellido}" />
+                                            <h:outputLabel value="Codigo:" style="color:blueviolet"/>
+                                            <h:outputText value="#{entidad.docCodigo}"/>
+                                            <h:outputLabel value="Estado:" style="color:blueviolet"/>
+                                            <h:outputText value="#{entidad.docEstado}"/>
+                                            <h:outputLabel value="Telefono:" style="color:blueviolet"/>
+                                            <h:outputText value="#{entidad.docTelefono}"/>
+                                            <h:outputLabel value="DUI:" style="color:blueviolet"/>
+                                            <h:outputText value="#{entidad.docDui}"/><h:outputLabel value="Correo:" style="color:blueviolet"/>
                                             <h:outputText value="#{entidad.docCorreo}"/>
                                         </p:panelGrid> 
                                     </p:rowExpansion>
