Correccion de Bugs

--- a/BITLAB-war/web/alumnos.xhtml
+++ b/BITLAB-war/web/alumnos.xhtml
@@ -107,7 +107,7 @@
                                               <h:outputText value="Descargar curriculum"/>
                                            <p:commandButton value="CV" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);" icon="pi pi-arrow-down">
                                                 <f:setPropertyActionListener value="#{candidato}" target="#{candidatomanaged.candidato}"/>
-                                                <p:fileDownload value="#{candidatomanaged.CV}" />
+                                                <p:fileDownload value="#{candidatomanaged.cv}" />
                                             </p:commandButton>
 
 
