--- a/BITLAB-war/web/profile.xhtml
+++ b/BITLAB-war/web/profile.xhtml
@@ -360,7 +360,7 @@
                                                     <p:messages id="cvMessage" />
 
                                                     <p:commandButton value="Descargar CV" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);" icon="pi pi-arrow-down">
-                                                        <p:fileDownload value="#{fotoManaged.CV}" />
+                                                        <p:fileDownload value="#{fotoManaged.cv}" />
                                                     </p:commandButton>
                                                 </div>
                                             </div>
