--- a/BITLAB-war/web/forgot-password.xhtml
+++ b/BITLAB-war/web/forgot-password.xhtml
@@ -36,7 +36,7 @@
             <!-- Mensaje recibido del menejador -->
             <p:messages id="messagesAll" closable="true" showDetail="true" />
             <div class="login-logo">
-                <img src="resources/dist/img/BitlabLogo.png" width="150px" height="150px"></img>
+                <img src="resources/dist/img/BitlabLogo.png" class="rounded" width="150px" height="150px"></img>
                 <br/>
             </div>
             <!-- /.login-logo -->
@@ -54,7 +54,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <p:commandButton icon="pi pi-key" value="Recuperar contraseña" actionListener="#{usuarioManaged.recuperarContraseña()}"  update=":messagesAll" resetValues="true" />
+                                <p:commandButton icon="pi pi-key" value="Recuperar contraseña" actionListener="#{usuarioManaged.recuperarContrasena()}"  update=":messagesAll" resetValues="true" />
                             </div>
                             <!-- /.col -->
                         </div>
