--- a/BITLAB-war/web/login.xhtml
+++ b/BITLAB-war/web/login.xhtml
@@ -39,7 +39,7 @@
             <!-- Mensaje recibido del menejador -->
             <p:messages id="messagesAll" closable="true" showDetail="true" />
             <div class="login-logo">
-                <img src="resources/dist/img/BitlabLogo.png" width="150px" height="150px"></img>
+                <img src="resources/dist/img/BitlabLogo.png" class="rounded" width="150px" height="150px"></img>
                 <br/>
                 <b>Sistema de seleccion de becarios</b>
                 
