Agragando gestion de genero y mejoras en usuarios, idioma.
Agragando gestion de genero y mejoras en usuarios, idioma.

--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -261,7 +261,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="idiomaIngles.bitlab" class="nav-link">
+                                        <a href="sexo.bitlab" class="nav-link">
                                             <i class="fas fa-transgender-alt nav-icon"></i>
                                             <p>Gestion de generos</p>
                                         </a>
