Completando CRUD Ocupaciones
Completando CRUD Ocupaciones

--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -273,7 +273,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="idiomaIngles.bitlab" class="nav-link">
+                                        <a href="ocupacion.bitlab" class="nav-link">
                                             <i class="fas fa-briefcase nav-icon"></i>
                                             <p>Gestion de ocupacion</p>
                                         </a>
