--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -267,7 +267,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="idiomaIngles.bitlab" class="nav-link">
+                                        <a href="nivelAcademico.bitlab" class="nav-link">
                                             <i class="fas fa-school nav-icon"></i>
                                             <p>Gestion de nivel academico</p>
                                         </a>
