Afinando detalles en curso y ocupación
Afinando detalles en curso y ocupación

--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -275,7 +275,7 @@
                                     <li class="nav-item">
                                         <a href="ocupacion.bitlab" class="nav-link">
                                             <i class="fas fa-briefcase nav-icon"></i>
-                                            <p>Gestion de ocupacion</p>
+                                            <p>Gestion de ocupación</p>
                                         </a>
                                     </li>
                                 </ui:fragment>
