--- a/BITLAB-war/web/ocupacion.xhtml
+++ b/BITLAB-war/web/ocupacion.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Ocupacion</title>
+        <title>Ocupación</title>
     </h:head>
     <h:body>
         
@@ -16,7 +16,7 @@
                 <li class="nav-item">
                     <a href="prueba.bitlab" class="nav-link active">
                         <i class="fas fa-table nav-icon"></i>
-                        <p>Ocupacion</p>
+                        <p>Ocupación</p>
                     </a>
                 </li>
             </ui:define>
@@ -27,13 +27,13 @@
                     <div class="container-fluid">
                         <div class="row mb-2">
                             <div class="col-sm-6">
-                                <h1 class="m-0 text-dark">Ocupacion</h1>
+                                <h1 class="m-0 text-dark">Ocupación</h1>
                             </div>
                             <!-- /.col -->
                             <div class="col-sm-6">
                                 <ol class="breadcrumb float-sm-right">
                                     <li class="breadcrumb-item"><a href="index.bitlab">Home</a></li>
-                                    <li class="breadcrumb-item active">Ocupacion</li>
+                                    <li class="breadcrumb-item active">Ocupación</li>
                                 </ol>
                             </div>
                             <!-- /.col -->
